fix users and groups table overflow

--- a/node-directory-sync-example/public/stylesheets/style.css
+++ b/node-directory-sync-example/public/stylesheets/style.css
@@ -354,9 +354,10 @@ th {
     padding: 15px 40px;
 }
 
-.webhooks-container {
-  max-height: 600px;
-  overflow-y: scroll;
+.webhooks-container,
+.table-container {
+    max-height: 600px;
+    overflow-y: scroll;
 }
 
 .width-75 {
